@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.embeddable;
+
+import org.apache.cayenne.testdo.embeddable.auto._EmbedEntity2;
+
+public class EmbedEntity2 extends _EmbedEntity2 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
