@@ -1,0 +1,124 @@
+package org.apache.cayenne.testdo.embeddable.auto;
+
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+
+import org.apache.cayenne.BaseDataObject;
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.testdo.embeddable.EmbedEntity1;
+import org.apache.cayenne.testdo.embeddable.Embeddable1;
+
+/**
+ * Class _EmbedEntity2 was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _EmbedEntity2 extends BaseDataObject {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "ID";
+
+    public static final Property<String> NAME = Property.create("name", String.class);
+    public static final Property<Embeddable1> EMBEDDED = Property.create("embedded", Embeddable1.class);
+    public static final Property<EmbedEntity1> ENTITY1 = Property.create("entity1", EmbedEntity1.class);
+
+    protected String name;
+    protected Embeddable1 embedded;
+
+    protected Object entity1;
+
+    public void setName(String name) {
+        beforePropertyWrite("name", this.name, name);
+        this.name = name;
+    }
+
+    public String getName() {
+        beforePropertyRead("name");
+        return this.name;
+    }
+
+    public void setEmbedded(Embeddable1 embedded) {
+        beforePropertyWrite("embedded", this.embedded, embedded);
+        this.embedded = embedded;
+    }
+
+    public Embeddable1 getEmbedded() {
+        beforePropertyRead("embedded");
+        return this.embedded;
+    }
+
+    public void setEntity1(EmbedEntity1 entity1) {
+        setToOneTarget("entity1", entity1, true);
+    }
+
+    public EmbedEntity1 getEntity1() {
+        return (EmbedEntity1)readProperty("entity1");
+    }
+
+    @Override
+    public Object readPropertyDirectly(String propName) {
+        if(propName == null) {
+            throw new IllegalArgumentException();
+        }
+
+        switch(propName) {
+            case "name":
+                return this.name;
+            case "embedded":
+                return this.embedded;
+            case "entity1":
+                return this.entity1;
+            default:
+                return super.readPropertyDirectly(propName);
+        }
+    }
+
+    @Override
+    public void writePropertyDirectly(String propName, Object val) {
+        if(propName == null) {
+            throw new IllegalArgumentException();
+        }
+
+        switch (propName) {
+            case "name":
+                this.name = (String)val;
+                break;
+            case "embedded":
+                this.embedded = (Embeddable1)val;
+                break;
+            case "entity1":
+                this.entity1 = val;
+                break;
+            default:
+                super.writePropertyDirectly(propName, val);
+        }
+    }
+
+    private void writeObject(ObjectOutputStream out) throws IOException {
+        writeSerialized(out);
+    }
+
+    private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
+        readSerialized(in);
+    }
+
+    @Override
+    protected void writeState(ObjectOutputStream out) throws IOException {
+        super.writeState(out);
+        out.writeObject(this.name);
+        out.writeObject(this.embedded);
+        out.writeObject(this.entity1);
+    }
+
+    @Override
+    protected void readState(ObjectInputStream in) throws IOException, ClassNotFoundException {
+        super.readState(in);
+        this.name = (String)in.readObject();
+        this.embedded = (Embeddable1)in.readObject();
+        this.entity1 = in.readObject();
+    }
+
+}
